# inference_platform

./: .gitignore  Makefile  README.md  kind-config.yaml  pyproject.toml  task.md
docker/: classifier_service.Dockerfile  llm_service.Dockerfile
helm/: prometheus-adapter-values.yaml
k8s/: classifier_deployment.yaml  classifier_service.yaml  llm-hpa.yaml  llm_deployment.yaml  llm_service.yaml  servicemonitor.yaml
loadtest/: locustfile.py
proto/: inference.proto  inference_pb2.py  inference_pb2_grpc.py
scripts/: 23_kind_build.sh  download_models.py  export_onnx.py  load_test.py  profile_infer.py  triton_client.py
services/classifier_service/: main.py
services/llm_service/: grpc_server.py  inference.py  main.py
triton_model_repo/resnet18/: config.pbtxt
