[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[project]
name = "inference-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Serving
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",

    # gRPC
    "grpcio>=1.64",
    "grpcio-tools>=1.64",

    # ML core
    "torch>=2.3",
    "torchvision>=0.18",
    "transformers>=4.41",
    "huggingface-hub>=0.23",
    "Pillow>=10.3",
    "numpy>=1.26",

    # Config
    "python-dotenv>=1.0",

    # Queue & cache
    "nats-py>=2.7",
    "redis[hiredis]>=5.0",
    "tenacity>=8.3",
    
    # Observability
    "prometheus-client>=0.20",
    "structlog>=24.1",
    "python-json-logger>=2.0",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24",
]

[project.optional-dependencies]
# GPU inference — только на машине с NVIDIA GPU
gpu = [
    "vllm>=0.5",
    "onnx>=1.16",
    "onnxruntime-gpu>=1.18",
    "tritonclient[all]>=2.45",
    "sentence-transformers>=3.0",
]

# CPU-only ONNX (для локальной разработки без GPU)
onnx-cpu = [
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "sentence-transformers>=3.0",
]

# Нагрузочное тестирование
loadtest = [
    "locust>=2.29",
]

# Разработка и тесты
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
